--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="Sumit Jangir" />
 <script type="application/ld+json">
-{"headline":"Sumit Jangir","@type":"WebSite","url":"http://localhost:4000/","name":"Sumit Jangir","description":"Let’s Code!!","@context":"https://schema.org"}</script>
+{"@type":"WebSite","url":"http://localhost:4000/","name":"Sumit Jangir","headline":"Sumit Jangir","description":"Let’s Code!!","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Sumit Jangir" /></head>
 <body><header class="site-header" role="banner">
@@ -48,7 +48,7 @@ I’m a Software Developer and currently working with <a href="https://www.linke
 <div class="panel panel-info">
   <p class="panel-heading"><strong>Introduction</strong></p>
   <div class="panel-body">
-    <p>Experienced Associate with a demonstrated history of working in the information technology and services industry. Skilled in React.js, Backbone.js, Handlebars.js, functional java script, OOJS, ES6, RequireJs, Babel, Grunt, MVC 4.0, REST, WEB API, ASP.NET, C#, JQuery, SQL Server. Strong professional with a Bachelor of Technology (B.Tech.) focused in Information Technology from Jaipur Engineering College and Research Centre, Jaipur</p>
+    <p>Experienced Associate with a demonstrated history of working in the information technology and services industry. Skilled in React.js, Backbone.js, Handlebars.js, functional java script, OOJS, ES6, RequireJs, Babel, Grunt, MVC 4.0, REST, WEB API, ASP.NET, C#, JQuery, SQL Server. Strong professional with a Bachelor of Technology (B.Tech.) focused in Information Technology from Jaipur Engineering College and Research Centre, Jaipur.</p>
   </div>
 </div>
 
