--- a/resume/index.html
+++ b/resume/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="http://localhost:4000/resume/" />
 <meta property="og:site_name" content="Sumit Jangir" />
 <script type="application/ld+json">
-{"headline":"Resume","@type":"WebPage","url":"http://localhost:4000/resume/","description":"Let’s Code!!","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"http://localhost:4000/resume/","headline":"Resume","description":"Let’s Code!!","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Sumit Jangir" /></head>
 <body><header class="site-header" role="banner">
