--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="http://localhost:4000/404.html" />
 <meta property="og:site_name" content="Sumit Jangir" />
 <script type="application/ld+json">
-{"headline":"Sumit Jangir","@type":"WebPage","url":"http://localhost:4000/404.html","description":"Let’s Code!!","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"http://localhost:4000/404.html","headline":"Sumit Jangir","description":"Let’s Code!!","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Sumit Jangir" /></head>
 <body><header class="site-header" role="banner">
