--- a/achievements/index.html
+++ b/achievements/index.html
@@ -45,17 +45,17 @@
   <li>Nominated on Cheer board for excellent work in project [Nagarro Softwares]
 <img src="../images/cheerboard.jpg" alt="Semantic description of image" height="70%" width="70%" /></li>
   <li>Awarded by “Star of the Month” 2 times [Tata Consultancy Services]
-<img src="../images/sm1.jpg" alt="Semantic description of image" height="70%" width="70%" />
-<img src="../images/sm2.jpg" alt="Semantic description of image" height="70%" width="70%" /></li>
+<img src="../images/sm1.JPG" alt="Semantic description of image" height="70%" width="70%" />
+<img src="../images/sm2.JPG" alt="Semantic description of image" height="70%" width="70%" /></li>
   <li>Awarded by “On the Spot Award” 3 times. [Tata Consultancy Services]
-<img src="../images/ots1.jpg" alt="Semantic description of image" height="70%" width="70%" />
-<img src="../images/ots2.jpg" alt="Semantic description of image" height="70%" width="70%" />
-<img src="../images/ots3.jpg" alt="Semantic description of image" height="70%" width="70%" /></li>
+<img src="../images/ots1.JPG" alt="Semantic description of image" height="70%" width="70%" />
+<img src="../images/ots2.JPG" alt="Semantic description of image" height="70%" width="70%" />
+<img src="../images/ots3.JPG" alt="Semantic description of image" height="70%" width="70%" /></li>
   <li>Awarded by “Best Team” 2 times. [Tata Consultancy Services]
-<img src="../images/bt1.jpg" alt="Semantic description of image" height="70%" width="70%" />
-<img src="../images/bt2.jpg" alt="Semantic description of image" height="70%" width="70%" /></li>
+<img src="../images/bt1.JPG" alt="Semantic description of image" height="70%" width="70%" />
+<img src="../images/bt2.JPG" alt="Semantic description of image" height="70%" width="70%" /></li>
   <li>Awarded by “Service Commitment Award”. [Tata Consultancy Services]
-<img src="../images/sc.jpg" alt="Semantic description of image" height="70%" width="70%" /></li>
+<img src="../images/sc.JPG" alt="Semantic description of image" height="70%" width="70%" /></li>
 </ul>
 
   </div>
