--- a/experience/index.html
+++ b/experience/index.html
@@ -28,7 +28,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/achievements/">Achievements</a><a class="page-link" href="/skills/">Skills</a><a class="page-link" href="/academics/">Academics</a><a class="page-link" href="/experience/">Experience</a><a class="page-link" href="/projects/">Projects</a><a class="page-link" href="/resume/">Resume</a></div>
+        <div class="trigger"><a class="page-link" href="/achievements/">Achievements</a><a class="page-link" href="/skills/">Skills</a><a class="page-link" href="/academics/">Academics</a><a class="page-link" href="/certifications/">Certifications</a><a class="page-link" href="/experience/">Experience</a><a class="page-link" href="/projects/">Projects</a><a class="page-link" href="/resume/">Resume</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
