--- a/achievements/index.html
+++ b/achievements/index.html
@@ -130,6 +130,12 @@
                 </svg>
                 <span class="username">jangirsumit</span></a>
             </li>
+            <li>
+              <a href="https://www.hackerrank.com/SumitJangir"><svg class="svg-icon">
+                  <use xlink:href="/assets/minima-social-icons.svg#hackerrank"></use>
+                </svg>
+                <span class="username">SumitJangir</span></a>
+            </li>
           </ul>
         </div>
 
