--- a/achievements/index.html
+++ b/achievements/index.html
@@ -75,21 +75,26 @@
               Awarded by “Star of the Month” 2 times [Tata Consultancy
               Services]
               <img src="../images/sm1.JPG" alt="Semantic description of image" class="image-width"
-                style="width: 48%; display:inline-block;padding: 5px;margin: 5px;" />
+                style="width: 45%; display:inline-block;padding: 5px;margin: 5px;" />
               <img src="../images/sm2.JPG" alt="Semantic description of image" class="image-width"
-                style="width: 48%; display:inline-block;padding: 5px;margin: 5px;" />
+                style="width: 45%; display:inline-block;padding: 5px;margin: 5px;" />
             </li>
             <li>
               Awarded by “On the Spot Award” 3 times. [Tata Consultancy
               Services]
-              <img src="../images/ots1.JPG" alt="Semantic description of image" height="70%" width="70%" />
-              <img src="../images/ots2.JPG" alt="Semantic description of image" height="70%" width="70%" />
-              <img src="../images/ots3.JPG" alt="Semantic description of image" height="70%" width="70%" />
+              <img src="../images/ots1.JPG" alt="Semantic description of image" class="image-width"
+                style="width:30%; display:inline-block;padding: 5px;margin: 5px;" />
+              <img src="../images/ots2.JPG" alt="Semantic description of image" class="image-width"
+                style="width: 30%; display:inline-block;padding: 5px;margin: 5px;" />
+              <img src="../images/ots3.JPG" alt="Semantic description of image" class="image-width"
+                style="width: 30%; display:inline-block;padding: 5px;margin: 5px;" />
             </li>
             <li>
               Awarded by “Best Team” 2 times. [Tata Consultancy Services]
-              <img src="../images/bt1.JPG" alt="Semantic description of image" height="70%" width="70%" />
-              <img src="../images/bt2.JPG" alt="Semantic description of image" height="70%" width="70%" />
+              <img src="../images/bt1.JPG" alt="Semantic description of image" class="image-width"
+                style="width: 45%; display:inline-block;padding: 5px;margin: 5px;" />
+              <img src="../images/bt2.JPG" alt="Semantic description of image" class="image-width"
+                style="width: 45%; display:inline-block;padding: 5px;margin: 5px;" />
             </li>
             <li>
               Awarded by “Service Commitment Award”. [Tata Consultancy
