--- a/achievements/index.html
+++ b/achievements/index.html
@@ -69,7 +69,8 @@
             <li>
               Nominated on Cheer board for excellent work in project [Nagarro
               Softwares]
-              <img src="../images/cheerboard.jpg" alt="Semantic description of image" height="70%" width="70%" />
+              <img src="../images/cheerboard.jpg" alt="Semantic description of image" height="70%" width="70%"
+                class="image-width" />
             </li>
             <li>
               Awarded by “Star of the Month” 2 times [Tata Consultancy
@@ -105,7 +106,8 @@
             <li>
               Awarded by “Service Commitment Award”. [Tata Consultancy
               Services]
-              <img src="../images/sc.JPG" alt="Semantic description of image" height="70%" width="70%" />
+              <img src="../images/sc.JPG" alt="Semantic description of image" height="70%" width="70%"
+                class="image-width" />
             </li>
           </ul>
         </div>
