--- a/projects/index.html
+++ b/projects/index.html
@@ -214,4 +214,13 @@
       </div>
     </footer>
   </body>
+  <script>
+    object.addEventListener("load", function() {
+      var nodes = document.querySelectorAll(".post-content li");
+      for (let index = 0; index < nodes.length; index++) {
+        var randomColor = Math.floor(Math.random() * 16777215).toString(16);
+        nodes[index].style.background = "#" + randomColor;
+      }
+    });
+  </script>
 </html>
