--- a/achievements/index.html
+++ b/achievements/index.html
@@ -224,7 +224,7 @@
       </div>
     </footer>
     <script>
-      object.addEventListener("load", function() {
+      window.addEventListener("load", function() {
         var nodes = document.querySelectorAll(".post-content li");
         for (let index = 0; index < nodes.length; index++) {
           var randomColor = Math.floor(Math.random() * 16777215).toString(16);
