--- a/experience/index.html
+++ b/experience/index.html
@@ -177,7 +177,7 @@
     </footer>
   </body>
   <script>
-    object.addEventListener("load", function() {
+    window.addEventListener("load", function() {
       var nodes = document.querySelectorAll(".post-content li");
       for (let index = 0; index < nodes.length; index++) {
         var randomColor = Math.floor(Math.random() * 16777215).toString(16);
